--- a/packages/radios/src/styles/_module.scss
+++ b/packages/radios/src/styles/_module.scss
@@ -39,33 +39,27 @@
 
     + label {
       position: relative;
-      display: inline-flex;
-      align-items: center;
       cursor: pointer;
       padding: space(3v) 0;
       font-size: font-size(14);
       -webkit-tap-highlight-color: transparent;
-      padding-left: space(8v);
-      // flex-direction: column;
-      // justify-content: flex-start;
-      // align-items: flex-start;
-      display: -ms-grid;
       display: grid;
+      display: -ms-grid;
       grid-row: 1;
-      grid-column: 2;
-      -ms-align-items: center;
       -ms-grid-row: 2;
+      grid-column: 2;
       -ms-grid-column: 2;
       align-items: center;
-      -ms-grid-columns: 1fr space(8v);
+      -ms-align-items: center;
       grid-template-columns: 1fr space(8v);
+      -ms-grid-columns: 1fr space(8v);
       text-align: left;
       direction: rtl;
 
       @include radio-rich() {
-        justify-content: center;
         padding-left: space(14v);
         min-height: space(22v);
+        height: 1px; // fix IE vertical center
         width: 100%;
         @include scheme-element-box-shadow-color(g300, true, 'inset 0 0 0 1px $COLOR');
         padding-top: space(2v);
@@ -75,12 +69,16 @@
         background-size: space(20v) space(20v);
         background-repeat: no-repeat;
         @include scheme-element-bg-color(w, true, true);
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: center;
 
-        // hover
-        &:hover,
-        &:active {
-          // @include scheme-element-bg-color(block-color-hover, true);
-        }
+        // TODO: refactor hover avec background-color au lieu de backgrounnd-image
+        // &:hover,
+        // &:active {
+        // @include scheme-element-bg-color(block-color-hover, true);
+        // }
 
         // sm
         @include before() {
@@ -146,21 +144,19 @@
         }
 
         @include radio-rich() {
-          @include before() {
-            @include scheme-element-box-shadow-color(w, true, 'inset 0 0 0 3px $COLOR');
-            @include scheme-element-bg-color(bf500, true);
-          }
-        }
-
-        @include radio-rich() {
           width: 100%;
           @include scheme-element-bg-color(bf500);
           @include scheme-element-text-color(w-bf500, true);
           @include scheme-element-box-shadow-color(bf500, true, 'inset 0 0 0 1px $COLOR');
+
           @include before() {
             @include scheme-element-border-color(w-bf500, true);
             @include scheme-element-box-shadow-color(bf500, true, 'inset 0 0 0 3px $COLOR');
             @include scheme-element-bg-color(w-bf500, true);
+          }
+
+          .#{$prefix}-hint-text {
+            @include scheme-element-text-color(g200);
           }
         }
       }
@@ -199,11 +195,9 @@
   &--sm {
     input[type="radio"] {
       & + label {
-        padding-left: space(6v);
         @include before() {
           width: space(4v);
           height: space(4v);
-          margin-top: 2px;
         }
       }
 
@@ -212,10 +206,6 @@
           box-shadow: inset 0 0 0 3px var(--w);
         }
       }
-    }
-
-    .rf-hint-text {
-      margin-left: space(6v);
     }
   }
 }
@@ -233,21 +223,22 @@
     input[type="radio"] + label {
       @include radio-rich() {
         margin-top: space(2v);
-        margin-bottom: space(2v);
+        margin-bottom: space(4v);
       }
     }
   }
 
   &--inline {
     .#{$prefix}-radio-group {
-
       &:not(:last-child) {
         input[type="radio"] + label {
           @include radio-rich() {
             margin-right: space(3v);
+            margin-bottom: space(2v);
           }
         }
       }
+
       &:last-child {
         input[type="radio"] + label {
           @include radio-rich() {
@@ -255,6 +246,7 @@
           }
         }
       }
+
       &:first-child {
         input[type="radio"] + label {
           @include radio-rich() {
@@ -262,7 +254,6 @@
           }
         }
       }
-
     }
   }
 }
